
Fri Jun 25 10:22:21 CDT 1999
(KainX)

Patch for builddir != srcdir from Colin Gibbs <colin@pro-fusiononline.com>.

-------------------------------------------------------------------------------

Thu Jul  1 14:14:06 PDT 1999
(Mandrake)

stuff.

-------------------------------------------------------------------------------

Tue Aug 17 17:16:18 PDT 1999
(Mandrake)

stuff..

-------------------------------------------------------------------------------

Tue Oct 19 03:55:52 PDT 1999
(Mandrake)

RPM builds with --enable-upgrade=no by default.

-------------------------------------------------------------------------------

Sat Nov  6 10:21:24 PST 1999
(Mandrake)

added --disable-zoom configure option for people on alphas/etc.

-------------------------------------------------------------------------------

Mon Nov  8 12:03:58 PST 1999
(Mandrake)

upped the revision in CVS since there is at least one fix past 0.16.2 in cvs
at this point.  (and we might have to release this later)

-------------------------------------------------------------------------------

Mon Dec  6 20:12:00 PST 1999
(Mandrake)

changed this to be 0.16.4

-------------------------------------------------------------------------------

Wed Dec  8 10:16:21 PST 1999
(Mandrake)

fixed a typo in INSTALL pointed out by Peter Kjellerstedt
<peter.kjellerstedt@axis.com>

-------------------------------------------------------------------------------

Wed Dec  8 10:31:47 PST 1999
(Mandrake)

upped esound requirement to 0.2.17 due to security fix

-------------------------------------------------------------------------------

Fri Dec 10 11:09:41 PST 1999
(KainX)

i18n patch and other fixes from Peter Kjellerstedt
<peter.kjellerstedt@axis.com>.

-------------------------------------------------------------------------------

Tue Dec 21 11:07:46 PST 1999
(Mandrake)

added support for freetype in regular location OR in freetype/ subdirectory
(like the new versions)