@@ -12,15 +12,21 @@ DIE=0
         echo
         echo "You must have autoconf installed to compile Enlightenment."
         echo "Download the appropriate package for your distribution,"
-        echo "or get the source tarball at ftp://ftp.gnu.org/pub/gnu/"
+        echo "or get the source tarball at ftp://ftp.gnu.org/pub/gnu/autoconf"
         DIE=1
 }
 
 (automake --version) < /dev/null > /dev/null 2>&1 || {
         echo
         echo "You must have automake installed to compile Enlightenment."
-        echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.3.tar.gz"
-        echo "(or a newer version if it is available)"
+        echo "Get it at ftp://ftp.gnu.org/pub/gnu/automake"
+        DIE=1
+}
+
+(gettext --version) < /dev/null > /dev/null 2>&1 || {
+        echo
+        echo "You must have gettext installed to compile Enlightenment."
+        echo "Get ftp://ftp.gnu.org/pub/gnu/gettext"
         DIE=1
 }
 
